[gd_scene load_steps=16 format=2]

[ext_resource path="res://Sprites/Flowers.png" type="Texture" id=1]
[ext_resource path="res://Sprites/tree.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Bush.png" type="Texture" id=3]
[ext_resource path="res://Paralax.png" type="Texture" id=4]
[ext_resource path="res://Player/Idle0.png" type="Texture" id=5]
[ext_resource path="res://Maps/Tilesets/TileSetResource.tres" type="TileSet" id=6]
[ext_resource path="res://Maps/ParallaxLayer.gd" type="Script" id=7]
[ext_resource path="res://Sprites/ExtraTiles.png" type="Texture" id=8]
[ext_resource path="res://Sprites/tree_dark.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Bush_dark.png" type="Texture" id=10]
[ext_resource path="res://Maps/Menu.gd" type="Script" id=11]
[ext_resource path="res://Sprites/Flowers_dark.png" type="Texture" id=12]
[ext_resource path="res://BlackScreen.png" type="Texture" id=13]

[sub_resource type="Animation" id=2]
resource_name = "Fade-in"
length = 0.5
tracks/0/type = "bezier"
tracks/0/path = NodePath("BlackScreen:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("BlackScreen:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("BlackScreen:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("BlackScreen:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}

[sub_resource type="Animation" id=3]
resource_name = "Fade-out"
tracks/0/type = "bezier"
tracks/0/path = NodePath("BlackScreen:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("BlackScreen:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("BlackScreen:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("BlackScreen:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}

[node name="Menu" type="Node2D"]
script = ExtResource( 11 )

[node name="Flowers" type="Sprite" parent="."]
position = Vector2( 674.055, 503.51 )
texture = ExtResource( 1 )

[node name="Flowers2" type="Sprite" parent="."]
visible = false
position = Vector2( 674.055, 503.51 )
texture = ExtResource( 12 )

[node name="TileMap" type="TileMap" parent="."]
scale = Vector2( 2, 2 )
z_index = 5
tile_set = ExtResource( 6 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 7, 3, 0, 8, 4, 0, 9, 4, 0, 10, 4, 0, 11, 4, 0, 12, 4, 0, 13, 4, 0, 14, 4, 0, 15, 4, 0, 65543, 3, 0, 65544, 4, 0, 65545, 4, 0, 65546, 4, 0, 65547, 4, 0, 65548, 4, 0, 65549, 4, 0, 65550, 4, 0, 65551, 4, 0, 131079, 3, 0, 131080, 4, 0, 131081, 4, 0, 131082, 4, 0, 131083, 4, 0, 131084, 4, 0, 131085, 4, 0, 131086, 4, 0, 131087, 4, 0, 196615, 6, 0, 196616, 7, 0, 196617, 7, 0, 196618, 7, 0, 196619, 7, 0, 196620, 7, 0, 196621, 7, 0, 196622, 11, 0, 196623, 4, 0, 262158, 3, 0, 262159, 4, 0, 327694, 3, 0, 327695, 4, 0, 393230, 3, 0, 393231, 4, 0, 458766, 3, 0, 458767, 4, 0, 524290, 0, 0, 524291, 1, 0, 524292, 1, 0, 524293, 1, 0, 524294, 1, 0, 524295, 1, 0, 524296, 1, 0, 524297, 1, 0, 524298, 1, 0, 524299, 1, 0, 524300, 1, 0, 524301, 1, 0, 524302, 9, 0, 524303, 4, 0, 589826, 3, 0, 589827, 4, 0, 589828, 4, 0, 589829, 4, 0, 589830, 4, 0, 589831, 4, 0, 589832, 4, 0, 589833, 4, 0, 589834, 4, 0, 589835, 4, 0, 589836, 4, 0, 589837, 4, 0, 589838, 4, 0, 589839, 4, 0 )

[node name="TileMap2" type="TileMap" parent="."]
visible = false
scale = Vector2( 2, 2 )
z_index = 7
tile_set = ExtResource( 6 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 7, 16, 0, 8, 17, 0, 9, 17, 0, 10, 17, 0, 11, 17, 0, 12, 17, 0, 13, 17, 0, 14, 17, 0, 15, 17, 0, 65543, 16, 0, 65544, 17, 0, 65545, 17, 0, 65546, 17, 0, 65547, 17, 0, 65548, 17, 0, 65549, 17, 0, 65550, 17, 0, 65551, 17, 0, 131079, 16, 0, 131080, 17, 0, 131081, 17, 0, 131082, 17, 0, 131083, 17, 0, 131084, 17, 0, 131085, 17, 0, 131086, 17, 0, 131087, 17, 0, 196615, 19, 0, 196616, 20, 0, 196617, 20, 0, 196618, 20, 0, 196619, 20, 0, 196620, 20, 0, 196621, 20, 0, 196622, 24, 0, 196623, 17, 0, 262158, 16, 0, 262159, 17, 0, 327694, 16, 0, 327695, 17, 0, 393230, 16, 0, 393231, 17, 0, 458766, 16, 0, 458767, 17, 0, 524290, 13, 0, 524291, 14, 0, 524292, 14, 0, 524293, 14, 0, 524294, 14, 0, 524295, 14, 0, 524296, 14, 0, 524297, 14, 0, 524298, 14, 0, 524299, 14, 0, 524300, 14, 0, 524301, 14, 0, 524302, 22, 0, 524303, 17, 0, 589826, 16, 0, 589827, 17, 0, 589828, 17, 0, 589829, 17, 0, 589830, 17, 0, 589831, 17, 0, 589832, 17, 0, 589833, 17, 0, 589834, 17, 0, 589835, 17, 0, 589836, 17, 0, 589837, 17, 0, 589838, 17, 0, 589839, 17, 0 )

[node name="Bush" type="Sprite" parent="."]
position = Vector2( 483.263, 487.527 )
texture = ExtResource( 3 )

[node name="Bush2" type="Sprite" parent="."]
visible = false
position = Vector2( 483.263, 487.527 )
texture = ExtResource( 10 )

[node name="tree" type="Sprite" parent="."]
position = Vector2( 805.369, 445.421 )
scale = Vector2( 2, 1.5 )
texture = ExtResource( 2 )

[node name="tree2" type="Sprite" parent="."]
visible = false
position = Vector2( 805.369, 445.421 )
scale = Vector2( 2, 1.5 )
texture = ExtResource( 9 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
scroll_ignore_camera_zoom = true

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 2048, 0 )
script = ExtResource( 7 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )
centered = false

[node name="Idle0" type="Sprite" parent="."]
position = Vector2( 159.785, 458.005 )
scale = Vector2( 2, 2 )
texture = ExtResource( 5 )
flip_h = true

[node name="ExtraTiles" type="Sprite" parent="."]
visible = false
position = Vector2( 943.779, 560.413 )
rotation = 0.593228
scale = Vector2( 2, 2 )
z_index = 8
texture = ExtResource( 8 )
region_enabled = true
region_rect = Rect2( 0, 0, 31.7828, 30.5273 )

[node name="ExtraTiles2" type="Sprite" parent="."]
position = Vector2( 384.268, 572.104 )
rotation = 0.018064
scale = Vector2( 2, 2 )
z_index = 6
texture = ExtResource( 8 )
region_enabled = true
region_rect = Rect2( -0.0444031, 32.0674, 34.9073, 32.8539 )

[node name="ExtraTiles3" type="Sprite" parent="."]
position = Vector2( 673.21, 101.113 )
rotation = -1.35205
scale = Vector2( 2, 2 )
z_index = 6
texture = ExtResource( 8 )
region_enabled = true
region_rect = Rect2( 33.3228, -0.273184, 35.9339, 36.9606 )

[node name="Timer" type="Timer" parent="."]
wait_time = 15.0
autostart = true

[node name="BlackScreen" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
z_index = 20
texture = ExtResource( 13 )
centered = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Fade-in = SubResource( 2 )
anims/Fade-out = SubResource( 3 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
